--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+
 <html>
 <head>
   <meta charset="utf-8">
   <title>Mind Reader</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="script.js">
+    <script src="script.js"></script>
 </head>
 <body>
   <h1>Mind Reader</h1>
